add: bean validation and bug in cpf